# neural_network_from_scratch

./: CMakeLists.txt
include/: activation_function.hpp  data_loader.hpp  neural_network.hpp
src/: main.cpp
test/: test.cpp
